Bug 1822116 - image-orientation: none should apply to CORS image requests. r=emilio

The image-orientation: none property should apply to images that use
CORS.

Differential Revision: https://phabricator.services.mozilla.com/D175051