layout/base/nsLayoutUtils.cpp
@@ -6806,6 +6806,13 @@ already_AddRefed<imgIContainer> nsLayoutUtils::OrientImage(
   return img.forget();
 }
 
+/* static */
+bool nsLayoutUtils::ImageRequestUsesCORS(imgIRequest* aRequest) {
+  int32_t corsMode = mozilla::CORS_NONE;
+  return NS_SUCCEEDED(aRequest->GetCORSMode(&corsMode)) &&
+         corsMode != mozilla::CORS_NONE;
+}
+
 static bool NonZeroCorner(const LengthPercentage& aLength) {
   // Since negative results are clamped to 0, check > 0.
   return aLength.Resolve(nscoord_MAX) > 0 || aLength.Resolve(0) > 0;
@@ -7344,10 +7351,7 @@ SurfaceFromElementResult nsLayoutUtils::SurfaceFromElement(
     result.mDrawInfo.mDrawingFlags = frameFlags;
   }
 
-  int32_t corsmode;
-  if (NS_SUCCEEDED(imgRequest->GetCORSMode(&corsmode))) {
-    result.mCORSUsed = corsmode != CORS_NONE;
-  }
+  result.mCORSUsed = nsLayoutUtils::ImageRequestUsesCORS(imgRequest);
 
   bool hadCrossOriginRedirects = true;
   imgRequest->GetHadCrossOriginRedirects(&hadCrossOriginRedirects);
